@@ -3,6 +3,8 @@ Revision history for {{$dist->name}}
 {{$NEXT}}
           - added missing dependency on [MojibakeTests] (RT#88807)
           - fixed bad dependency for NoTabs tester that changed names
+          - make tests run without git again (broken in 0.024) by removing all
+            git-based plugins for testing
 
 0.024     2013-09-19 02:29:14Z (Karen Etheridge)
           - now also support the server = catagits option, for Catalyst
